# UWSCR

./: .buildinfo  .gitignore  .gitmodules  Build.ps1  BuildChkimg.ps1  Cargo.toml  CmakeOpencv.ps1  LICENSE  about.toml  build.rs  genindex.html  index.html  objects.inv  py-modindex.html  readme.md  search.html  searchindex.js
.github/: feature_request.yml
.github/ISSUE_TEMPLATE/: ---.md  --.md  bug_report.yml  bugs.md  documentation.yml  feature_request.yml  questions.md  questions.yml
_sources/: index.rst.txt
_sources/builtins/: comobject.rst.txt  excel.rst.txt  file.rst.txt  gui.rst.txt  network.rst.txt  scriptcontrol.rst.txt  string.rst.txt  system.rst.txt  text.rst.txt  web.rst.txt  window.rst.txt
_sources/syntax/: special_variables.rst.txt  statement.rst.txt
_sources/usage/: example.rst.txt  how_to_build.rst.txt  how_to_run.rst.txt  installation.rst.txt  settings.rst.txt
_static/: license.html
builtins/: about_parameters.html  array.html  browser.html  comobject.html  control.html  excel.html  file.html  gui.html  math.html  network.html  scriptcontrol.html  socket.html  string.html  system.html  text.html  web.html  window.html
docs/source/: conf.py  index.rst  ウィンドウ操作関数.rst  制御関数.rst  配列操作関数.rst
docs/source/_static/: custom.js
docs/source/builtins/: comobject.rst  system.rst
docs/source/usage/: how_to_build.rst  settings.rst
documents/source/: conf.py  index.rst
documents/source/_static/: license.html
documents/source/builtins/: about_parameters.rst  array.rst  browser.rst  comobject.rst  control.rst  excel.rst  file.rst  gui.rst  math.rst  scriptcontrol.rst  socket.rst  string.rst  system.rst  text.rst  web.rst  window.rst
documents/source/syntax/: special_variables.rst  statement.rst
documents/source/usage/: how_to_build.rst  how_to_run.rst  language_server.rst  settings.rst
evaluator/: Cargo.toml
evaluator/src/: builtins.rs  def_dll.rs  environment.rs  error.rs  gui.rs  lib.rs  object.rs
evaluator/src/builtins/: array_control.rs  browser_control.rs  chkimg.rs  clipboard.rs  com_object.rs  dialog.rs  file_control.rs  key_codes.rs  math.rs  socket.rs  system_controls.rs  text_control.rs  window_control.rs  window_low.rs
evaluator/src/builtins/array_control/: qsort.rs
evaluator/src/builtins/file_control/: drop.rs  interface.rs
evaluator/src/builtins/socket/: tcp.rs  udp.rs  websocket.rs
evaluator/src/builtins/system_controls/: gettime.rs  lockhard.rs  poff.rs  sensor.rs  sethotkey.rs  sound.rs
evaluator/src/builtins/window_control/: acc.rs  clkitem.rs  monitor.rs  uia.rs  win32.rs
evaluator/src/gui/: balloon.rs  form.rs  input.rs  msgbox.rs  popupmenu.rs  print.rs  slctbox.rs
evaluator/src/object/: browser.rs  class.rs  comobject.rs  fopen.rs  function.rs  hashtbl.rs  module.rs  uobject.rs  ustruct.rs  utask.rs  variant.rs  version.rs  web.rs
evaluator/src/object/comobject/: safearray.rs
func_desc/: Cargo.toml
func_desc/src/: lib.rs
func_desc_macro/: Cargo.toml
func_desc_macro/src/: lib.rs
icons/: readme.txt
icons/EXEUWS/pdn/: MAINICON_0016.pdn  MAINICON_0032.pdn  MAINICON_0048.pdn  MAINICON_0064.pdn  MAINICON_0128.pdn  MAINICON_0256.pdn  MAINICON_1080_0016.pdn  MAINICON_1080_0032-0256.pdn  XTENICON_0016.pdn  XTENICON_0032.pdn  XTENICON_0048.pdn  XTENICON_1080.pdn
icons/UDEBUG/pdn/: MAINICON_0032.pdn  MAINICON_0048.pdn  MAINICON_0064.pdn  MAINICON_0128.pdn  MAINICON_0256.pdn  MAINICON_1080.pdn
icons/UI/pdn/: open_16 .pdn  pause_16 .pdn  play_16.pdn  record_16.pdn  resume_16.pdn  save_16.pdn  setting_16.pdn  stepin_16.pdn  stepover_16.pdn  stop_16.pdn
icons/UWS2EXE/pdn/: MAINICON_0032.pdn  MAINICON_0048.pdn  MAINICON_0064.pdn  MAINICON_0128.pdn  MAINICON_0256.pdn  MAINICON_1080.pdn  XTENICON_0016.pdn  XTENICON_0032.pdn  XTENICON_0048.pdn  XTENICON_1080.pdn
icons/UWSC/pdn/: MAINICON_0016.pdn  MAINICON_0032.pdn  MAINICON_0048.pdn  MAINICON_0064.pdn  MAINICON_0128.pdn  MAINICON_0256.pdn  MAINICON_1080_0016.pdn  MAINICON_1080_0032-0256.pdn  XTENICON_0016.pdn  XTENICON_0032.pdn  XTENICON_0048.pdn  XTENICON_1080.pdn
icons/XREF/pdn/: MAINICON_0032.pdn  MAINICON_0048.pdn  MAINICON_0064.pdn  MAINICON_0128.pdn  MAINICON_0256.pdn  MAINICON_1080.pdn
icons/_ScriptLab Shadow Setting/: 0032_shadow.sls  0064_shadow.sls  0128_shadow.sls  0256_shadow.sls  1080_shadow.sls
language_server/: Cargo.toml
language_server/src/: completion.rs  lib.rs  semantic_token.rs
pages/: index.md
pages/schema/: uwscr-settings-schema.json
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  serializer.rs  token.rs
schema/: uwscr-settings-schema.json
src/: ast.rs  com.rs  error.rs  evaluator.rs  gui.rs  gui2.rs  language_server.rs  lexer.rs  lib.rs  logging.rs  main.rs  parser.rs  repl.rs  script.rs  serializer.rs  settings.rs  token.rs  winapi.rs  winapi_util.rs
src/error/: evaluator.rs  parser.rs
src/evaluator/: builtins.rs  com_object.rs  def_dll.rs  devtools_protocol.rs  env.rs  environment.rs  object.rs
src/evaluator/builtins/: array_control.rs  browser_control.rs  chkimg.rs  clipboard.rs  com_object.rs  dialog.rs  file_control.rs  key_codes.rs  math.rs  system_controls.rs  text_control.rs  window_control.rs  window_low.rs
src/evaluator/builtins/array_control/: qsort.rs
src/evaluator/builtins/file_control/: drop.rs
src/evaluator/object/: browser.rs  class.rs  comobject.rs  fopen.rs  function.rs  hashtbl.rs  module.rs  uobject.rs  ustruct.rs  variant.rs  version.rs  web.rs
src/gui/: balloon.rs  form.rs  input.rs  mainwin.rs  msgbox.rs  popupmenu.rs  print.rs  slctbox.rs
src/gui2/: balloon.rs  form.rs  popupmenu.rs  print.rs
src/language_server/: semantic_token.rs
syntax/: special_variables.html  statement.html
usage/: example.html  how_to_build.html  how_to_run.html  installation.html  language_server.html  settings.html
util/: Cargo.toml
util/src/: clipboard.rs  com.rs  error.rs  lib.rs  logging.rs  settings.rs  winapi.rs
uwscr/: Cargo.toml  build.rs
uwscr/src/: lib.rs  main.rs  record.rs  repl.rs  script.rs
wix/: x64.wxs  x86.wxs
(+11 files in other folders)
