[workspace.package]
version = "0.15.0"
edition = "2021"
rust-version = "1.72.1"

[workspace]
resolver = "2"
members = [
    "uwscr",
    "evaluator",
    "parser",
    "util",
    "language_server",
]

[workspace.dependencies]
encoding_rs = "0.8"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
windows = "0.52.0"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1"
dunce = "1.0.4"
