[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.76.0"

[workspace]
resolver = "2"
members = [
    "uwscr",
    "evaluator",
    "parser",
    "util",
    "language_server",
    "func_desc",
    "func_desc_macro"
]

[workspace.dependencies]
encoding_rs = "0.8"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
windows = "0.52.0"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1"
