[workspace.package]
version = "1.0.6"
edition = "2024"
rust-version = "1.86.0"

[workspace]
resolver = "2"
members = [
    "uwscr",
    "evaluator",
    "parser",
    "util",
    "language_server",
    "func_desc",
    "func_desc_macro"
]

[workspace.dependencies]
encoding_rs = "0.8"
# once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
windows = "0.52.0"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1"
