[package]
name = "evaluator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
chkimg = ["dep:opencv"]

[dependencies]
parser = { path = "../parser"}
util = { path = "../util"}
encoding_rs.workspace = true
once_cell.workspace = true
serde_json.workspace = true
serde.workspace = true
base64 = "0.21.0"
chrono = {version = "0.4.30", features = ["unstable-locales"]}
csv = "1.1"
dlopen = "0.1"
htmlentity = "1.3.1"
indexmap = "2.2.2"
kanaria = "0.2.0"
libffi = "3.2.0"
linkify = "0.10.0"
num-derive = "0.4.2"
num-traits = "0.2"
opencv = { version = "0.74.2", default-features = false, features = ["imgcodecs", "imgproc"], optional = true}
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
stacker = "0.1.14"
scraper = "0.18.1"
strum = "0.26.1"
strum_macros = "0.26.1"
tungstenite = "0.21.0"
url = "2.4.1"
urlencoding = "2.1.0"
webview2-com = "0.28.0"
winreg = "0.52.0"
wmi = "0.13.0"
zip = "0.6.2"
dunce = "1.0.4"

[dependencies.windows]
workspace = true
features = [
    "Win32_Devices_Sensors",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Speech",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Power",
    "Win32_System_ProcessStatus",
    "Win32_System_Shutdown",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_System_Wmi",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",

    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Foundation",
]

[dev-dependencies]
rstest = "0.18.2"
