[package]
name = "func_desc_macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = {version = "2.0.55", features = ["full"]}
func_desc ={ path = "../func_desc"}
