[package]
name = "language_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evaluator = { path = "../evaluator"}
parser = { path = "../parser"}
serde_json.workspace = true
tokio = {version = "1.35.0", features = ["io-std", "sync"]}
tower-lsp = "0.20.0"