[package]
name = "parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util"}
serde.workspace = true
reqwest.workspace = true
regex.workspace = true
strum_macros = "0.26.1"
bincode = "1"

