[package]
name = "util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.30", features = ["unstable-locales"]}
schemars = "0.8"
regex = "1"
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
encoding_rs.workspace = true
url = "2.4.1"

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]