[package]
name = "uwscr"
build = "build.rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evaluator = { path = "../evaluator"}
parser = { path = "../parser"}
util = { path = "../util"}
# language_server = { path = "../language_server"}
reedline = "0.29.0"

[build-dependencies]
winres = "0.1"

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
]